--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,19 @@
+/*
+ * Copyright (c) 2013-2017 Metin Kale
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
 buildscript {
     repositories {
         maven { url 'https://maven.fabric.io/public' } //excludeInFDroid
@@ -13,21 +29,7 @@ buildscript {
 
 
 apply plugin: 'com.android.application'
-apply plugin: 'io.fabric'  /*
- * Copyright (c) 2013-2017 Metin Kale
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */  //excludeInFDroid
+apply plugin: 'io.fabric'  //excludeInFDroid
 
 android {
 
@@ -48,7 +50,7 @@ android {
     defaultConfig {
         applicationId "com.metinkale.prayer"
         minSdkVersion 15
-        targetSdkVersion 26
+        targetSdkVersion 25
         versionCode 191
         versionName '3.6.6'
         multiDexEnabled false
@@ -112,16 +114,16 @@ dependencies {
     //excludeInFDroid
     //excludeInFDroid
     compile 'org.metinkale:praytimes:0.9'
-    compile 'com.android.support:percent:25.3.1'
     compile 'com.google.code.gson:gson:2.7'
-    compile 'com.android.support:recyclerview-v7:25.3.1'
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:design:25.3.1'
-    compile 'com.android.support:preference-v14:25.3.1'
+    compile 'com.android.support:percent:+'
+    compile 'com.android.support:recyclerview-v7:+'
+    compile 'com.android.support:appcompat-v7:+'
+    compile 'com.android.support:customtabs:+'
+    compile 'com.android.support:design:+'
+    compile 'com.android.support:cardview-v7:+'
+    compile 'com.android.support:preference-v14:+'
     compile 'com.koushikdutta.ion:ion:2.1.9'
-    compile 'com.android.support:cardview-v7:25.3.1'
     compile 'net.steamcrafted:materialiconlib:1.1.1'
-    compile 'com.android.support:customtabs:25.3.1'
     compile 'com.evernote:android-job:1.1.3'
     compile 'com.github.anrwatchdog:anrwatchdog:1.3.0'
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
