added intro texts

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -115,13 +115,13 @@ dependencies {
     //excludeInFDroid
     compile 'org.metinkale:praytimes:0.9'
     compile 'com.google.code.gson:gson:2.7'
-    compile 'com.android.support:percent:+'
-    compile 'com.android.support:recyclerview-v7:+'
-    compile 'com.android.support:appcompat-v7:+'
-    compile 'com.android.support:customtabs:+'
-    compile 'com.android.support:design:+'
-    compile 'com.android.support:cardview-v7:+'
-    compile 'com.android.support:preference-v14:+'
+    compile 'com.android.support:percent:26.0.0'
+    compile 'com.android.support:recyclerview-v7:26.0.0'
+    compile 'com.android.support:appcompat-v7:26.0.0'
+    compile 'com.android.support:customtabs:26.0.0'
+    compile 'com.android.support:design:26.0.0'
+    compile 'com.android.support:cardview-v7:26.0.0'
+    compile 'com.android.support:preference-v14:26.0.0'
     compile 'com.koushikdutta.ion:ion:2.1.9'
     compile 'net.steamcrafted:materialiconlib:1.1.1'
     compile 'com.evernote:android-job:1.1.3'
@@ -131,4 +131,5 @@ dependencies {
     playCompile 'com.google.android.gms:play-services-gcm:10.2.1'
     playCompile 'com.google.android.gms:play-services-location:10.2.1'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
 }
