--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,6 +93,10 @@ android {
         targetCompatibility JavaVersion.VERSION_1_7
         sourceCompatibility JavaVersion.VERSION_1_7
     }
+
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
 }
 
 
@@ -110,10 +114,7 @@ dependencies {
         transitive = true
     }
     compile 'joda-time:joda-time:2.9.6:no-tzdb'
-    //excludeInFDroid
-    //excludeInFDroid
-    //excludeInFDroid
-    compile 'org.metinkale:praytimes:0.9'
+    compile 'org.metinkale:praytimes:0.9.1'
     compile 'com.google.code.gson:gson:2.7'
     compile 'com.android.support:percent:26.0.0'
     compile 'com.android.support:recyclerview-v7:26.0.0'
@@ -124,12 +125,14 @@ dependencies {
     compile 'com.android.support:preference-v14:26.0.0'
     compile 'com.koushikdutta.ion:ion:2.1.9'
     compile 'net.steamcrafted:materialiconlib:1.1.1'
-    compile 'com.evernote:android-job:1.1.3'
+    compile 'com.evernote:android-job:1.1.11'
     compile 'com.github.anrwatchdog:anrwatchdog:1.3.0'
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
-    playCompile 'com.google.android.gms:play-services-maps:10.2.1'
-    playCompile 'com.google.android.gms:play-services-gcm:10.2.1'
-    playCompile 'com.google.android.gms:play-services-location:10.2.1'
+    playCompile 'com.google.android.gms:play-services-maps:10.2.1' //excludeInFDroid
+    playCompile 'com.google.android.gms:play-services-gcm:10.2.1' //excludeInFDroid
+    playCompile 'com.google.android.gms:play-services-location:10.2.1' //excludeInFDroid
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+
 }
+
