--- a/app/build.gradle
+++ b/app/build.gradle
@@ -114,7 +114,7 @@ dependencies {
         transitive = true
     }
     compile 'joda-time:joda-time:2.9.6:no-tzdb'
-    compile 'org.metinkale:praytimes:0.9.1'
+    compile('org.metinkale:praytimes:0.9.2') { changing = true }
     compile 'com.google.code.gson:gson:2.7'
     compile 'com.android.support:percent:26.0.0'
     compile 'com.android.support:recyclerview-v7:26.0.0'
