--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,15 +77,18 @@ android {
         }
     }
 
+    flavorDimensions "store"
     productFlavors {
         fdroid {
             versionName = android.defaultConfig.versionName + " F-Droid"
+            dimension "store"
         }
         play {
             versionName = android.defaultConfig.versionName + " Play Store"
             repositories {
                 maven { url 'https://maven.fabric.io/public' } //excludeInFDroid
             }
+            dimension "store"
         }
     }
 
@@ -113,18 +116,18 @@ dependencies {
     compile('com.mikepenz:aboutlibraries:5.8.5@aar') {
         transitive = true
     }
+    compile project(':pray-times')
     compile 'joda-time:joda-time:2.9.6:no-tzdb'
-    compile('org.metinkale:praytimes:0.9.2') { changing = true }
-    compile 'com.google.code.gson:gson:2.7'
-    compile 'com.android.support:percent:26.0.0'
-    compile 'com.android.support:recyclerview-v7:26.0.0'
-    compile 'com.android.support:appcompat-v7:26.0.0'
-    compile 'com.android.support:customtabs:26.0.0'
-    compile 'com.android.support:design:26.0.0'
-    compile 'com.android.support:cardview-v7:26.0.0'
-    compile 'com.android.support:preference-v14:26.0.0'
+    compile 'com.google.code.gson:gson:2.8.2'
+    compile 'com.android.support:percent:26.1.0'
+    compile 'com.android.support:recyclerview-v7:26.1.0'
+    compile 'com.android.support:appcompat-v7:26.1.0'
+    compile 'com.android.support:customtabs:26.1.0'
+    compile 'com.android.support:design:26.1.0'
+    compile 'com.android.support:cardview-v7:26.1.0'
+    compile 'com.android.support:preference-v14:26.1.0'
     compile 'com.koushikdutta.ion:ion:2.1.9'
-    compile 'net.steamcrafted:materialiconlib:1.1.1'
+    compile 'net.steamcrafted:materialiconlib:1.1.4'
     compile 'com.evernote:android-job:1.1.11'
     compile 'com.github.anrwatchdog:anrwatchdog:1.3.0'
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
