use markdown for changelogs #100

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,9 @@ apply plugin: 'com.android.application'
 apply plugin: 'io.fabric'  //excludeInFDroid
 
 android {
+    sourceSets {
+        main.assets.srcDirs += ['../changelogs']
+    }
 
     packagingOptions {
         exclude 'META-INF/LICENSE.txt'
@@ -136,6 +139,7 @@ dependencies {
     playCompile 'com.google.android.gms:play-services-location:10.2.1' //excludeInFDroid
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'us.feras.mdv:markdownview:1.1.0'
 
 }
 
