--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,6 +1,6 @@
 project_identifier : prayer-times-android
 api_key : c97e84b51d71d79c1ebd505465cb5fcf
-base_path: /home/metin/Projects/prayer-times-android/app/src/main
+base_path: app/src/main
 files:
   -
     source: /res/values/strings.xml
