--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,36 +109,36 @@ android {
 
 
 dependencies {
-    playCompile('com.crashlytics.sdk.android:crashlytics:2.6.8@aar') {//excludeInFDroid
+    playImplementation('com.crashlytics.sdk.android:crashlytics:2.6.8@aar') {//excludeInFDroid
         transitive = true;//excludeInFDroid
     }//excludeInFDroid
-    fdroidCompile('com.mapbox.mapboxsdk:mapbox-android-sdk:4.1.1@aar') {
+    fdroidImplementation('com.mapbox.mapboxsdk:mapbox-android-sdk:4.1.1@aar') {
         transitive = true
     }
-    compile('com.mikepenz:aboutlibraries:5.8.5@aar') {
+    implementation('com.mikepenz:aboutlibraries:5.8.5@aar') {
         transitive = true
     }
-    compile project(':pray-times')
-    compile 'joda-time:joda-time:2.9.6:no-tzdb'
-    compile 'com.google.code.gson:gson:2.8.2'
-    compile 'com.android.support:percent:26.1.0'
-    compile 'com.android.support:recyclerview-v7:26.1.0'
-    compile 'com.android.support:appcompat-v7:26.1.0'
-    compile 'com.android.support:customtabs:26.1.0'
-    compile 'com.android.support:design:26.1.0'
-    compile 'com.android.support:cardview-v7:26.1.0'
-    compile 'com.android.support:preference-v14:26.1.0'
-    compile 'com.koushikdutta.ion:ion:2.1.9'
-    compile 'net.steamcrafted:materialiconlib:1.1.4'
-    compile 'com.evernote:android-job:1.1.11'
-    compile 'com.github.anrwatchdog:anrwatchdog:1.3.0'
-    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
-    playCompile 'com.google.android.gms:play-services-maps:10.2.1' //excludeInFDroid
-    playCompile 'com.google.android.gms:play-services-gcm:10.2.1' //excludeInFDroid
-    playCompile 'com.google.android.gms:play-services-location:10.2.1' //excludeInFDroid
-    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'us.feras.mdv:markdownview:1.1.0'
+    implementation project(':pray-times')
+    implementation 'joda-time:joda-time:2.9.6:no-tzdb'
+    implementation 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.android.support:percent:26.1.0'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:customtabs:26.1.0'
+    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.android.support:cardview-v7:26.1.0'
+    implementation 'com.android.support:preference-v14:26.1.0'
+    implementation 'com.koushikdutta.ion:ion:2.1.9'
+    implementation 'net.steamcrafted:materialiconlib:1.1.4'
+    implementation 'com.evernote:android-job:1.1.11'
+    implementation 'com.github.anrwatchdog:anrwatchdog:1.3.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'us.feras.mdv:markdownview:1.1.0'
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5'
+    playImplementation 'com.google.android.gms:play-services-maps:10.2.1' //excludeInFDroid
+    playImplementation 'com.google.android.gms:play-services-gcm:10.2.1' //excludeInFDroid
+    playImplementation 'com.google.android.gms:play-services-location:10.2.1' //excludeInFDroid
+    releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
 
 }
 
