--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,7 @@ android {
             debuggable true
             minifyEnabled false
             zipAlignEnabled false
+            ext.enableCrashlytics = false
         }
         release {
             debuggable false
