--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,13 +47,13 @@ android {
         abortOnError false
     }
 
-    compileSdkVersion 26
+    compileSdkVersion 27
     buildToolsVersion '27.0.3'
 
     defaultConfig {
         applicationId "com.metinkale.prayer"
         minSdkVersion 15
-        targetSdkVersion 25
+        targetSdkVersion 27
         versionCode 194
         versionName '3.7'
         multiDexEnabled false
@@ -67,12 +67,19 @@ android {
 
     buildTypes {
         debug {
+            applicationIdSuffix '.debug'
+            versionNameSuffix ' DEBUG'
+            resValue "string", "FILE_PROVIDER_AUTHORITIES", "com.metinkale.prayer.debug.fileprovider"
+
             debuggable true
             minifyEnabled false
             zipAlignEnabled false
             ext.enableCrashlytics = false
         }
         release {
+            resValue "string", "FILE_PROVIDER_AUTHORITIES", "com.metinkale.prayer.fileprovider"
+
+
             debuggable false
             minifyEnabled true
             zipAlignEnabled true
@@ -84,11 +91,11 @@ android {
     flavorDimensions "store"
     productFlavors {
         fdroid {
-            versionName = android.defaultConfig.versionName + " F-Droid"
+            versionNameSuffix ' F-Droid'
             dimension "store"
         }
         play {
-            versionName = android.defaultConfig.versionName + " Play Store"
+            versionNameSuffix " Play Store"
             repositories {
                 maven { url 'https://maven.fabric.io/public' } //excludeInFDroid
             }
@@ -101,45 +108,47 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_7
     }
 
-    testOptions {
-        unitTests.returnDefaultValues = true
-    }
 }
 
-
-
-
 dependencies {
-    playImplementation('com.crashlytics.sdk.android:crashlytics:2.6.8@aar') {//excludeInFDroid
+    playImplementation 'com.google.android.gms:play-services-maps:11.8.0' //excludeInFDroid
+    playImplementation 'com.google.android.gms:play-services-gcm:11.8.0' //excludeInFDroid
+    playImplementation 'com.google.android.gms:play-services-location:11.8.0' //excludeInFDroid
+    playImplementation('com.crashlytics.sdk.android:crashlytics:2.9.5@aar') {//excludeInFDroid
         transitive = true;//excludeInFDroid
     }//excludeInFDroid
     fdroidImplementation('com.mapbox.mapboxsdk:mapbox-android-sdk:4.1.1@aar') {
         transitive = true
     }
+
     implementation('com.mikepenz:aboutlibraries:5.8.5@aar') {
         transitive = true
     }
     implementation 'org.metinkale:praytimes:0.9.3.1'
     implementation 'joda-time:joda-time:2.9.6:no-tzdb'
     implementation 'com.google.code.gson:gson:2.8.2'
-    implementation 'com.android.support:percent:26.1.0'
-    implementation 'com.android.support:recyclerview-v7:26.1.0'
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support:customtabs:26.1.0'
-    implementation 'com.android.support:design:26.1.0'
-    implementation 'com.android.support:cardview-v7:26.1.0'
-    implementation 'com.android.support:preference-v14:26.1.0'
-    implementation 'com.koushikdutta.ion:ion:2.1.9'
-    implementation 'net.steamcrafted:materialiconlib:1.1.4'
+    implementation 'com.android.support:percent:27.1.1'
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:customtabs:27.1.1'
+    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support:cardview-v7:27.1.1'
+    implementation 'com.android.support:preference-v14:27.1.1'
+    implementation 'com.koushikdutta.ion:ion:2.2.1'
+    implementation 'net.steamcrafted:materialiconlib:1.1.5'
     implementation 'com.evernote:android-job:1.1.11'
     implementation 'com.github.anrwatchdog:anrwatchdog:1.3.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'us.feras.mdv:markdownview:1.1.0'
-    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5'
-    playImplementation 'com.google.android.gms:play-services-maps:11.8.0' //excludeInFDroid
-    playImplementation 'com.google.android.gms:play-services-gcm:11.8.0' //excludeInFDroid
-    playImplementation 'com.google.android.gms:play-services-location:11.8.0' //excludeInFDroid
-    releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+    implementation "android.arch.persistence.room:runtime:1.1.1"
 
+    releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4'
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5.4'
+
+    compileOnly "org.projectlombok:lombok:1.18.2"
+    annotationProcessor 'org.projectlombok:lombok:1.18.2'
+    annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
+    annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
 }
 
