--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -140,6 +140,19 @@
             </intent-filter>
         </activity-alias>
 
+        <activity-alias
+            android:name=".aliasUK"
+            android:enabled="false"
+            android:label="@string/appNameUK"
+            android:targetActivity=".ShortcutActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.MULTIWINDOW_LAUNCHER" />
+            </intent-filter>
+        </activity-alias>
+
 
     </application>
 </manifest>
