--- a/features/widget/build.gradle
+++ b/features/widget/build.gradle
@@ -1,4 +1,4 @@
-apply plugin: 'com.android.feature'
+apply plugin: 'com.android.library'
 
 android {
     sourceSets {
@@ -45,6 +45,4 @@ dependencies {
     implementation project(':features:times')
     implementation project(':features:base')
 
-    compileOnly "org.projectlombok:lombok:1.18.2"
-    annotationProcessor 'org.projectlombok:lombok:1.18.2'
 }
