--- a/features/intro/build.gradle
+++ b/features/intro/build.gradle
@@ -1,4 +1,4 @@
-apply plugin: 'com.android.feature'
+apply plugin: 'com.android.library'
 
 android {
     sourceSets {
@@ -42,6 +42,4 @@ dependencies {
     implementation project(':features:times')
     implementation project(':features:base')
     implementation project(':features:about')
-    compileOnly "org.projectlombok:lombok:1.18.2"
-    annotationProcessor 'org.projectlombok:lombok:1.18.2'
 }
