--- a/build.gradle
+++ b/build.gradle
@@ -31,9 +31,8 @@ allprojects {
         mavenLocal()
         google()
         jcenter()
-        maven {
-            url "https://maven.google.com"
-        }
+        maven { url "https://maven.google.com" }
+        maven { url 'https://jitpack.io' }
     }
 }
 
