--- a/features/about/build.gradle
+++ b/features/about/build.gradle
@@ -11,8 +11,8 @@ android {
 
 
     defaultConfig {
-        minSdkVersion 15
         targetSdkVersion 27
+        minSdkVersion 16
         versionCode 1
         versionName "1.0"
     }
@@ -39,5 +39,6 @@ dependencies {
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':features:base')
-
+    implementation('com.mikepenz:aboutlibraries:5.8.5@aar') { transitive = true }
+    implementation 'androidx.appcompat:appcompat:1.0.0'
 }
