--- a/features/base/build.gradle
+++ b/features/base/build.gradle
@@ -22,7 +22,7 @@ buildscript {
 
     dependencies {
         //noinspection GradleDynamicVersion
-        classpath 'io.fabric.tools:gradle:+' //excludeInFDroid
+        classpath 'io.fabric.tools:gradle:1.+' //excludeInFDroid
     }
 
 
@@ -32,7 +32,13 @@ buildscript {
 apply plugin: 'com.android.library'
 apply plugin: 'io.fabric'  //excludeInFDroid
 
+
 android {
+    lintOptions {
+        disable 'MissingTranslation'
+    }
+
+
     sourceSets {
         main {
             res.srcDirs += 'src/main/translations'
@@ -43,8 +49,8 @@ android {
     buildToolsVersion '28.0.3'
 
     defaultConfig {
-        minSdkVersion 15
         targetSdkVersion 28
+        minSdkVersion 16
         versionCode 194
         versionName '3.7'
         vectorDrawables.useSupportLibrary = true
@@ -77,42 +83,25 @@ android {
 
 }
 
-crashlytics { instantAppSupport true }
 
 dependencies {
+    playApi('com.crashlytics.sdk.android:crashlytics:2.9.8@aar') { transitive = true }
+//excludeInFDroid
 
+    // androidx dependencies. TODO check whats really needed
     implementation 'androidx.multidex:multidex:2.0.0'
-    api 'org.metinkale:praytimes:0.9.3.5'
+    implementation('androidx.annotation:annotation:1.0.1') { force = true }
+    implementation 'androidx.percentlayout:percentlayout:1.0.0'
 
-    playApi('com.crashlytics.sdk.android:crashlytics:2.9.8@aar') {//excludeInFDroid
-        transitive = true//excludeInFDroid
-    }//excludeInFDroid
-    api 'com.google.android.play:core:1.3.6'
-    api('com.mikepenz:aboutlibraries:5.8.5@aar') {
-        transitive = true
-    }
-    api 'joda-time:joda-time:2.9.6:no-tzdb'
-    api 'com.google.code.gson:gson:2.8.2'
-    api 'androidx.core:core:1.0.0'
-    api 'androidx.percentlayout:percentlayout:1.0.0'
-    api 'androidx.recyclerview:recyclerview:1.0.0'
-    api 'androidx.appcompat:appcompat:1.0.0'
-    api 'androidx.browser:browser:1.0.0'
-    api 'com.google.android.material:material:1.0.0'
-    api 'androidx.cardview:cardview:1.0.0'
-    api 'androidx.legacy:legacy-preference-v14:1.0.0'
-    api 'com.koushikdutta.ion:ion:2.2.1'
-    api 'net.steamcrafted:materialiconlib:1.1.5'
-    api 'com.evernote:android-job:1.2.6'
-    api 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
-    api 'us.feras.mdv:markdownview:1.1.0'
-    api "androidx.lifecycle:lifecycle-extensions:2.0.0"
-    api "androidx.room:room-runtime:2.1.0-alpha04"
-    api 'androidx.media:media:1.0.0'
 
-    releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4'
-    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5.4'
+    implementation 'joda-time:joda-time:2.9.6:no-tzdb'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'net.steamcrafted:materialiconlib:1.1.5'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.koushikdutta.ion:ion:2.2.1'
+    implementation 'androidx.browser:browser:1.0.0'
+    implementation 'androidx.legacy:legacy-preference-v14:1.0.0'
 
-    annotationProcessor "androidx.lifecycle:lifecycle-compiler:2.0.0"
-    annotationProcessor "androidx.room:room-compiler:2.1.0-alpha02"// alpha03 is buggy!
+
+
 }
