--- a/features/calendar/build.gradle
+++ b/features/calendar/build.gradle
@@ -11,8 +11,8 @@ android {
 
 
     defaultConfig {
-        minSdkVersion 15
         targetSdkVersion 27
+        minSdkVersion 16
         versionCode 1
         versionName "1.0"
     }
@@ -39,5 +39,7 @@ dependencies {
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':features:base')
-
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'joda-time:joda-time:2.9.6:no-tzdb'
+    implementation 'androidx.legacy:legacy-preference-v14:1.0.0'
 }
