--- a/features/compass/build.gradle
+++ b/features/compass/build.gradle
@@ -11,8 +11,8 @@ android {
 
 
     defaultConfig {
-        minSdkVersion 15
         targetSdkVersion 27
+        minSdkVersion 16
         versionCode 1
         versionName "1.0"
     }
@@ -42,8 +42,13 @@ dependencies {
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':features:base')
+    implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.15' // newer versions require higher min sdk
     implementation 'com.otaliastudios:cameraview:1.6.0'
+    implementation 'net.steamcrafted:materialiconlib:1.1.5'
+    implementation 'org.metinkale:praytimes:0.9.3.5'
+    implementation 'joda-time:joda-time:2.9.6:no-tzdb'
+    implementation 'com.google.android.material:material:1.0.0'
     playImplementation 'com.google.android.gms:play-services-maps:11.8.0' //excludeInFDroid
     playImplementation 'com.google.android.gms:play-services-gcm:11.8.0' //excludeInFDroid
     playImplementation 'com.google.android.gms:play-services-location:11.8.0' //excludeInFDroid
