--- a/features/intro/build.gradle
+++ b/features/intro/build.gradle
@@ -12,8 +12,8 @@ android {
 
 
     defaultConfig {
-        minSdkVersion 15
         targetSdkVersion 27
+        minSdkVersion 16
         versionCode 1
         versionName "1.0"
     }
@@ -42,4 +42,8 @@ dependencies {
     implementation project(':features:times')
     implementation project(':features:base')
     implementation project(':features:about')
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'net.steamcrafted:materialiconlib:1.1.5'
+    implementation 'joda-time:joda-time:2.9.6:no-tzdb'
+    implementation 'us.feras.mdv:markdownview:1.1.0'
 }
