--- a/features/times/src/main/AndroidManifest.xml
+++ b/features/times/src/main/AndroidManifest.xml
@@ -3,11 +3,6 @@
     xmlns:dist="http://schemas.android.com/apk/distribution"
     package="com.metinkale.prayer.times">
 
-    <dist:module
-        dist:onDemand="true"
-        dist:title="@string/title_times">
-        <dist:fusing dist:include="true" />
-    </dist:module>
 
     <application>
         <activity
@@ -42,10 +37,10 @@
 
         <activity
             android:name=".SilenterPrompt"
+            android:exported="true"
             android:theme="@style/Theme.AppCompat.Light.Dialog" />
 
         <service android:name=".alarm.AlarmService" />
-
 
 
         <receiver android:name=".TimeTickReceiver">
