--- a/features/widget/build.gradle
+++ b/features/widget/build.gradle
@@ -12,8 +12,8 @@ android {
 
 
     defaultConfig {
-        minSdkVersion 15
         targetSdkVersion 27
+        minSdkVersion 16
         versionCode 1
         versionName "1.0"
 
@@ -44,5 +44,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':features:times')
     implementation project(':features:base')
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'joda-time:joda-time:2.9.6:no-tzdb'
 
 }
