--- a/build.gradle
+++ b/build.gradle
@@ -61,7 +61,7 @@ task updateCrowdinInfo() {
                 progress = line.substring(line.indexOf(">") + 1)
                 progress = progress.substring(0, progress.indexOf("<"))
 
-                if (!progress.equals("0")) {
+                if (progress != "0") {
                     out.println "        <item>" + lang + "|" + progress + "</item>"
                 }
             }
@@ -75,24 +75,24 @@ task updateCrowdinInfo() {
 
 task findDuplicateStrings {
     doLast {
-        def resources = [:];
+        def resources = [:]
         new File("features").eachFile { feature ->
-            def values = new File(feature, "src/main/res/values/strings.xml");
-            if (!values.exists()) return;
+            def values = new File(feature, "src/main/res/values/strings.xml")
+            if (!values.exists()) return
             values.eachLine { line ->
-                def search = "<string name=\"";
+                def search = "<string name=\""
                 if (line.contains(search)) {
-                    def name = line.substring(line.indexOf(search) + search.length());
-                    name = name.substring(0, name.indexOf("\""));
-                    def value = line.substring(line.indexOf(">") + 1);
+                    def name = line.substring(line.indexOf(search) + search.length())
+                    name = name.substring(0, name.indexOf("\""))
+                    def value = line.substring(line.indexOf(">") + 1)
                     if (value.contains("<"))
-                        value = value.substring(0, value.indexOf("<"));
+                        value = value.substring(0, value.indexOf("<"))
 
                     if (resources.containsKey(name)) {
                         System.err.printf("[findDuplicateStrings] String %s (%s) in %s also exists in %s\n", name, value, feature.getName(),
-                                resources.get(name));
+                                resources.get(name))
                     } else {
-                        resources.put(name, feature.getName());
+                        resources.put(name, feature.getName())
                     }
                 }
             }
@@ -102,14 +102,14 @@ task findDuplicateStrings {
 
 task findDuplicateResources {
     doLast {
-        def resources = [:];
+        def resources = [:]
         new File("features").eachFile { feature ->
-            def res = new File(feature, "src/main/res/");
+            def res = new File(feature, "src/main/res/")
             if (!res.exists()) return
             res.eachFile { file ->
                 if (file.name.startsWith("values")) return
                 file.eachFile { r ->
-                    def name = r.name;
+                    def name = r.name
                     if (resources.containsKey(name) && !resources.get(name).equals(feature.getName())) {
                         System.err.printf("[findDuplicateResources] String %s in %s also exists in %s\n", name, feature.getName(),
                                 resources.get(name))
