--- a/features/base/build.gradle
+++ b/features/base/build.gradle
@@ -81,6 +81,11 @@ android {
         }
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    
 }
 
 
