--- a/features/calendar/build.gradle
+++ b/features/calendar/build.gradle
@@ -42,4 +42,6 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation 'joda-time:joda-time:2.9.6:no-tzdb'
     implementation 'androidx.legacy:legacy-preference-v14:1.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'net.steamcrafted:materialiconlib:1.1.5'
 }
