--- a/features/compass/build.gradle
+++ b/features/compass/build.gradle
@@ -36,6 +36,11 @@ android {
             resValue "string", "google_maps_key", properties.getProperty("google_maps_key", "")
         }
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
