--- a/features/times/src/main/AndroidManifest.xml
+++ b/features/times/src/main/AndroidManifest.xml
@@ -69,13 +69,13 @@
 
         <receiver android:name=".alarm.SilenterReceiver" />
 
-        <service android:name=".LocationReceiver">
+        <receiver android:name=".LocationReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <action android:name="android.intent.action.QUICKBOOT_POWERON" />
                 <action android:name="android.intent.action.ACTION_USER_PRESENT" />
             </intent-filter>
-        </service>
+        </receiver>
 
 
     </application>
