--- a/features/compass/src/play/AndroidManifest.xml
+++ b/features/compass/src/play/AndroidManifest.xml
@@ -17,6 +17,8 @@
     package="com.metinkale.prayer.compass">
 
     <application>
-
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="your API key" />
     </application>
 </manifest>
