--- a/features/base/src/main/AndroidManifest.xml
+++ b/features/base/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?><!--
-  ~ Copyright (c) 2013-2017 Metin Kale
+ ~ Copyright (c) 2013-2017 Metin Kale
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -48,7 +48,7 @@
         tools:replace="android:label">
 
 
-        <service android:name="com.metinkale.prayer.MainIntentService" />
+        <service android:name="com.metinkale.prayer.CalendarIntegrationService" />
 
 
         <uses-library
