--- a/features/compass/src/play/AndroidManifest.xml
+++ b/features/compass/src/play/AndroidManifest.xml
@@ -17,8 +17,11 @@
     package="com.metinkale.prayer.compass">
 
     <application>
+        <uses-library
+            android:name="org.apache.http.legacy"
+            android:required="false" />
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="your API key" />
+            android:value="@string/GoogleApiKey" />
     </application>
 </manifest>
