--- a/features/times/build.gradle
+++ b/features/times/build.gradle
@@ -26,7 +26,6 @@ android {
     compileSdkVersion 28
 
 
-
     defaultConfig {
         targetSdkVersion 28
         minSdkVersion 16
@@ -60,13 +59,13 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':features:base')
+    implementation project(':features:praytimes')
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation 'com.koushikdutta.ion:ion:2.2.1'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'joda-time:joda-time:2.9.6:no-tzdb'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
-    implementation 'org.metinkale:praytimes:0.9.3.5'
     implementation 'com.evernote:android-job:1.2.6'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.media:media:1.0.1'
