--- a/settings.gradle
+++ b/settings.gradle
@@ -15,6 +15,6 @@
  */
 
 include ':app'
-include ':features:base', ':features:compass', ':features:times', ':features:widget', ':features:intro', ':features:tesbihat', ':features:about', ':features:calendar', ':features:dhikr', ':features:hadith', ':features:missedprayers', ':features:names', ':features:settings'
+include ':features:praytimes', ':features:base', ':features:compass', ':features:times', ':features:widget', ':features:intro', ':features:tesbihat', ':features:about', ':features:calendar', ':features:dhikr', ':features:hadith', ':features:missedprayers', ':features:names', ':features:settings'
 include ':alarmhelper'
 include ':tools:citiesfetcher'
